@@ -7,15 +7,12 @@
         <groupId>com.app</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <properties>
+        <skip.assembly>false</skip.assembly>
+    </properties>
+
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
     <dependencies>
-        <dependency>
-            <groupId>com.app</groupId>
-            <artifactId>exceptions</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
         <dependency>
             <groupId>com.app</groupId>
             <artifactId>exceptions</artifactId>
@@ -26,5 +23,39 @@
     <artifactId>model</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>main.Main</mainClass>
+                                </transformer>
+                            </transformers>
+                            <finalName>app-uber</finalName>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
