@@ -1,38 +1,59 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+
     <modelVersion>4.0.0</modelVersion>
+
 
     <packaging>pom</packaging>
 
+
     <modules>
+
+
         <module>model</module>
+
+
         <module>connection</module>
+
+
         <module>service</module>
+
+
         <module>repository</module>
+
+
         <module>validators</module>
+
+
         <module>main</module>
+
+
         <module>utils</module>
+
+
         <module>converters</module>
 
-    </modules>
 
+        <module>exceptions</module>
+
+
+    </modules>
     <groupId>com.app</groupId>
     <artifactId>SQL_1</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.target>12</maven.compiler.target>
+        <skip.assembly>true</skip.assembly>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -40,59 +61,276 @@
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
         </dependency>
+        <dependency>
+
+
+            <groupId>org.slf4j</groupId>
+
+
+            <artifactId>slf4j-api</artifactId>
+
+
+            <version>1.7.5</version>
+
+
+        </dependency>
+
+
+        <dependency>
+
+
+            <groupId>org.slf4j</groupId>
+
+
+            <artifactId>slf4j-log4j12</artifactId>
+
+
+            <version>1.7.5</version>
+
+
+        </dependency>
+
+
+        <dependency>
+
+
+            <groupId>com.google.code.gson</groupId>
+
+
+            <artifactId>gson</artifactId>
+
+
+            <version>2.8.5</version>
+
+
+        </dependency>
+
+
     </dependencies>
 
+
     <build>
-        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+
+
+        <pluginManagement>
+
+
             <plugins>
-                <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
+
+
                 <plugin>
+
+
                     <artifactId>maven-clean-plugin</artifactId>
+
+
                     <version>3.1.0</version>
+
+
                 </plugin>
-                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+
+
                 <plugin>
+
+
                     <artifactId>maven-resources-plugin</artifactId>
+
+
                     <version>3.0.2</version>
+
+
                 </plugin>
+
+
                 <plugin>
+
+
                     <artifactId>maven-compiler-plugin</artifactId>
+
+
                     <version>3.8.0</version>
+
+
                 </plugin>
+
+
                 <plugin>
+
+
                     <artifactId>maven-surefire-plugin</artifactId>
+
+
                     <version>2.22.1</version>
+
+
                 </plugin>
+
+
                 <plugin>
+
+
                     <artifactId>maven-jar-plugin</artifactId>
+
+
                     <version>3.0.2</version>
+
+
                 </plugin>
+
+
                 <plugin>
+
+
                     <artifactId>maven-install-plugin</artifactId>
+
+
                     <version>2.5.2</version>
+
+
                 </plugin>
+
+
                 <plugin>
+
+
                     <artifactId>maven-deploy-plugin</artifactId>
+
+
                     <version>2.8.2</version>
+
+
                 </plugin>
-                <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
+
+
                 <plugin>
+
+
                     <artifactId>maven-site-plugin</artifactId>
+
+
                     <version>3.7.1</version>
+
+
                 </plugin>
+
+
                 <plugin>
+
+
                     <artifactId>maven-project-info-reports-plugin</artifactId>
+
+
                     <version>3.0.0</version>
+
+
                 </plugin>
+
+
                 <plugin>
+
+
                     <groupId>org.apache.maven.plugins</groupId>
+
+
                     <artifactId>maven-compiler-plugin</artifactId>
+
+
                     <configuration>
+
+
                         <source>12</source>
+
+
                         <target>12</target>
+
+
+                        <compilerArgs>
+                            --enable-preview
+                        </compilerArgs>
+
+
                     </configuration>
+
+
                 </plugin>
+
+
+
+
+
+<!--                                <plugin>-->
+
+
+<!--                                    <groupId>org.apache.maven.plugins</groupId>-->
+
+
+<!--                                    <artifactId>maven-shade-plugin</artifactId>-->
+
+
+<!--                                    <version>2.3</version>-->
+
+
+<!--                                    <executions>-->
+
+
+<!--                                        <execution>-->
+
+
+<!--                                            <phase>package</phase>-->
+
+
+<!--                                            <goals>-->
+
+
+<!--                                                <goal>shade</goal>-->
+
+
+<!--                                            </goals>-->
+
+
+<!--                                            <configuration>-->
+
+
+<!--                                                <transformers>-->
+
+
+<!--                                                    <transformer-->
+
+
+<!--                                                            implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+
+
+<!--                                                        <mainClass>main.Main</mainClass>-->
+
+
+<!--                                                    </transformer>-->
+
+
+<!--                                                </transformers>-->
+
+
+<!--                                                <finalName>app-uber</finalName>-->
+
+
+<!--                                            </configuration>-->
+
+
+<!--                                        </execution>-->
+
+
+<!--                                    </executions>-->
+
+
+<!--                                </plugin>-->
+
+
             </plugins>
+
+
         </pluginManagement>
+
+
     </build>
+
+
 </project>
